--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head><title>EG Distance Calculator</title></head>
 <body>
+    <img src="https://i.ibb.co/Y7bQKLcQ/Sporcle-logo.png" alt="Sporcle logo" width="104" height="142">
     <h1>EG Distance Calculator</h1>
     <form method="POST">
         <input type="text" name="eliminated" placeholder="Eliminated (e.g. two)" style="width: 200px;" required><br>
