Add script for Vercel insights to index.html

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>EG Distance Calculator</title></head>
+<head>
+    <title>EG Distance Calculator</title>
+    <script defer src="/_vercel/insights/script.js"></script>
+</head>
 <body>
     <img src="https://i.ibb.co/Y7bQKLcQ/Sporcle-logo.png" alt="Sporcle logo" width="52" height="71">
     <h1>EG Distance Calculator</h1>
