Add language attribute to html tag

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>EG Distance Calculator</title>
     <script defer src="/_vercel/insights/script.js"></script>
