--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="round_number" placeholder="Round Number (e.g. one)" style="width: 200px;" required><br>
         <input type="text" name="sl_coords" placeholder="Secret Coords (lat, lon)" style="width: 200px;" required><br>
         
-        <p>Enter guesses (Format: Username | Location | lat, lon) - One per line:</p>
+        <p title="No spaces before or after the |">Enter guesses (Format: Username | Location | lat, lon) - One per line:</p>
         <textarea name="guesses" rows="10" cols="50"></textarea><br>
         
         <button type="submit">Calculate Round</button>
