Update body background color in index.html
Change body background color to powder blue.

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -4,7 +4,7 @@
     <title>EG Distance Calculator</title>
     <script defer src="/_vercel/insights/script.js"></script>
 </head>
-<body>
+<body style="background-color:powderblue;">
     <img src="/Sporcle logo.png" alt="Sporcle logo" width="52" height="71">
     <h1>EG Distance Calculator</h1>
     <form method="POST">
