--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -5,7 +5,7 @@
     <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body style="background-color:powderblue;">
-    <img src="/Sporcle logo.png" alt="Sporcle logo" width="52" height="71">
+    <img src="/Sporcle_logo.png" alt="Sporcle logo" width="52" height="71">
     <h1>EG Distance Calculator</h1>
     <form method="POST">
         <input type="text" name="eliminated" placeholder="Eliminated (e.g. two)" style="width: 200px;" required><br>
