--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>EG Distance Calculator</title>
+    <link rel="icon" type="image/x-icon" href="/Sporcle_pfp.png">
     <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body style="background-color:#fcd5b1; text-align:center">
